tests/ui/mismatched_types/closure-arg-type-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:3:14
   |
LL |     a.iter().map(|_: (u32, u32)| 45);
   |              ^^^ --------------- found signature defined here
   |              |
   |              expected due to this
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `fn((u32, u32)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: consider adjusting the signature so it borrows its argument
   |
LL |     a.iter().map(|_: &(u32, u32)| 45);
   |                      +

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:4:14
   |
LL |     a.iter().map(|_: &(u16, u16)| 45);
   |              ^^^ ---------------- found signature defined here
   |              |
   |              expected due to this
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `for<'a> fn(&'a (u16, u16)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:5:14
   |
LL |     a.iter().map(|_: (u16, u16)| 45);
   |              ^^^ --------------- found signature defined here
   |              |
   |              expected due to this
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `fn((u16, u16)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0631`.
